Fix styling on mobile layouts

--- a/css/_partial/_header.scss
+++ b/css/_partial/_header.scss
@@ -3,7 +3,7 @@
 // ==============================
 
 .header {
-  @include clearfix; 
+  @include clearfix;
   padding: $header-padding;
 
   @import '_header/logo';
@@ -13,7 +13,6 @@
 
 @include max-screen() {
   .header {
-    padding: 50px 0 0;
     text-align: center;
   }
 }
