--- a/css/_partial/_post/_header.scss
+++ b/css/_partial/_post/_header.scss
@@ -10,6 +10,7 @@
 
   .post-link {
     @include underline-from-center;
+    white-space: pre-line;
   }
 
   .post-meta {
