--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -115,6 +115,7 @@ $post-list-margin-bottom: 20px !default;
 
 // Padding of the post.
 $post-padding: 1.5em 0 !default;
+$post-mobile-padding: 1em 0 !default;
 
 // Border top of the post + post.
 $post-border: 1px solid $light-gray !default;
